--- a/theme/assets/css/editor-style-block-rtl.css
+++ b/theme/assets/css/editor-style-block-rtl.css
@@ -1,6 +1,6 @@
 /* ------------------------------------------- */
 
-/*	Twenty Twenty Editor Styles — Block Editor
+/*	Codedrift Editor Styles — Block Editor
 /* ------------------------------------------- */
 
 .editor-styles-wrapper {
