--- a/theme/assets/css/editor-style-classic-rtl.css
+++ b/theme/assets/css/editor-style-classic-rtl.css
@@ -1,6 +1,6 @@
 /* -------------------------------------------------------------------------- */
 
-/*	Twenty Twenty Editor Styles — Classic Editor
+/*	Codedrift Editor Styles — Classic Editor
 /* -------------------------------------------------------------------------- */
 
 
