--- a/theme/style.css
+++ b/theme/style.css
@@ -479,12 +479,12 @@ hr.styled-separator::after {
 
 a {
 	color: #cd2653;
-	text-decoration: underline;
+	text-decoration: none;
 }
 
 a:hover,
 a:focus {
-	text-decoration: none;
+	text-decoration: underline;
 }
 
 
@@ -1564,7 +1564,7 @@ body:not(.enable-search-modal) .site-logo img {
 
 ul.primary-menu {
 	display: flex;
-	font-size: 1.8rem;
+	font-size: 2rem;
 	font-weight: 500;
 	letter-spacing: -0.0277em;
 	flex-wrap: wrap;
@@ -1635,7 +1635,8 @@ ul.primary-menu {
 
 .primary-menu li.current-menu-item > a,
 .primary-menu li.current-menu-item > .link-icon-wrapper > a {
-	text-decoration: underline;
+	/* text-decoration: underline; */
+	font-weight: bold;
 }
 
 .primary-menu li.current-menu-item > a:hover,
@@ -1909,7 +1910,8 @@ button.close-nav-toggle .toggle-text {
 .modal-menu a:hover,
 .modal-menu li.current-menu-item > .ancestor-wrapper > a,
 .modal-menu li.current_page_ancestor > .ancestor-wrapper > a {
-	text-decoration: underline;
+	/* text-decoration: underline; */
+	font-weight: bold;
 }
 
 button.sub-menu-toggle {
