--- a/theme/style-rtl.css
+++ b/theme/style-rtl.css
@@ -267,6 +267,33 @@ Inter variable font. Usage:
 	src: url(./assets/fonts/inter/Inter-italic-var.woff2) format("woff2");
 }
 
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('./assets/fonts/SourceSans/SourceSansPro-Light.woff2') format('woff2'),
+        url('./assets/fonts/SourceSans/SourceSansPro-Light.woff') format('woff');
+    font-weight: 300;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('./assets/fonts/SourceSans/SourceSansPro-Regular.woff2') format('woff2'),
+        url('./assets/fonts/SourceSans/SourceSansPro-Regular.woff') format('woff');
+    font-weight: normal;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('./assets/fonts/SourceSans/SourceSansPro-Bold.woff2') format('woff2'),
+        url('./assets/fonts/SourceSans/SourceSansPro-Bold.woff') format('woff');
+    font-weight: bold;
+	font-style: normal;
+	font-display: swap;
+}
+
 
 /* Accessibility Settings -------------------- */
 
