--- a/theme/style.css
+++ b/theme/style.css
@@ -275,7 +275,8 @@ Inter variable font. Usage:
     src: url('./assets/fonts/SourceSans/SourceSansPro-Light.woff2') format('woff2'),
         url('./assets/fonts/SourceSans/SourceSansPro-Light.woff') format('woff');
     font-weight: 300;
-    font-style: normal;
+	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -283,7 +284,8 @@ Inter variable font. Usage:
     src: url('./assets/fonts/SourceSans/SourceSansPro-Regular.woff2') format('woff2'),
         url('./assets/fonts/SourceSans/SourceSansPro-Regular.woff') format('woff');
     font-weight: normal;
-    font-style: normal;
+	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -291,7 +293,8 @@ Inter variable font. Usage:
     src: url('./assets/fonts/SourceSans/SourceSansPro-Bold.woff2') format('woff2'),
         url('./assets/fonts/SourceSans/SourceSansPro-Bold.woff') format('woff');
     font-weight: bold;
-    font-style: normal;
+	font-style: normal;
+	font-display: swap;
 }
 
 
